overlays/magi/home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home
  labels:
    app.kubernetes.io/name: home
    app.kubernetes.io/instance: magi
